add script phpunit

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,8 @@
         "PayablAPI": "Payabl\\API\\PayanlFacade"
       }
     }
+  },
+  "scripts": {
+      "test": "./vendor/bin/phpunit"
   }
 }
